# BitGridAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  mypy.ini  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/study/: baseline_2026-05-26.json
docs/: README.md
docs/architecture/: 01_introduction_and_goals.md  02_constraints.md  03_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  09_design_decisions.md  10_quality_scenarios.md  11_risks_and_technical_debt.md  12_hci_perspective.md  13_ui_spec.md  14_explain_agent_and_research.md  99_glossar.md  README.md
docs/development/: README.md  TASKS.md
docs/research/: 201_central_research_question.md  202_working_questions.md  203_discussion_questions.md  README.md  bitgrid_principles.md  evaluation_framework.md  literature_review.md  research_question.md
docs/setup/: dev_environment.md  ssh_windows_setup.md
examples/: miner_wiring.py
infra/: docker-compose.override.yml  docker-compose.yml
openclaw/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  PROJECT_STATE.md  TOOLS.md  USER.md
scripts/: deploy_ha.sh  ha_export_scenario.py  ha_history_export.py  ha_rename_entities.py
src/: README.md  main.py  production_runner.py  runner.py
src/adapters/: README.md  __init__.py  actuation_writer.py  bitaxe_adapter.py  canaan_adapter.py  (+11 more)
tests/: conftest.py
(+371 files in other folders)
