[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bitgridai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "paho-mqtt>=1.6",
    "pymodbus>=3.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlite-utils>=3.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "testcontainers>=4.0",
    "freezegun>=1.4",
    "httpx>=0.27",
    "respx>=0.21",
    "black>=24.0",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = "src/ha/config/custom_components/"

[[tool.mypy.overrides]]
module = "pymodbus.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ui.api"
disallow_untyped_decorators = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
